--- a/app/views/saml_idp/idp/saml_post_logout.html.erb
+++ b/app/views/saml_idp/idp/saml_post_logout.html.erb
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   </head>
-  <body onload="document.forms[0].submit();" style="visibility:hidden;">  
-    <%= form_tag(saml_acs_url) do %>
+  <body onload="document.forms[0].submit();" style="visibility:hidden;">
+    <%= form_tag(saml_logout_url) do %>
       <%= hidden_field_tag("SAMLResponse", @saml_response) %>
       <%= hidden_field_tag("RelayState", params[:RelayState]) %>
       <%= submit_tag "Submit" %>
